# fgseaGPU

./: .Rbuildignore  .gitignore  .lintr  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure
.github/workflows/: R-CMD-check.yaml  coverage.yaml  cpp.yaml  lint.yaml  torch-nightly.yaml
R/: fgsea.R  globals.R
bench/: fgsea_bench.cpp  fsgea_bench.cpp
inst/: UPSTREAM_LICENCE
man/: calcGseaStat.Rd  fgsea.Rd  fgseaBackendInfo.Rd  fgseaBatch.Rd  fgseaDevice.Rd  fgseaGPU-package.Rd  fgseaMultilevel.Rd  fgseaPhenotype.Rd  fgseaSimple.Rd  fora.Rd  fsgeaBackendInfo.Rd  fsgeaDevice.Rd  fsgeaGPU-package.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  fgsea_core.h  fgsea_cpu.h  fgsea_dispatch.h  fgsea_exec.h  fgsea_fora.h  fgsea_gpu.h  fgsea_multilevel.h  fgsea_phenotype.h  fgsea_phenotype_gpu.h  fgsea_qvalue.h  fsgea_core.h  fsgea_core.hpp  fsgea_cpu.h  fsgea_cpu.hpp  fsgea_dispatch.h  fsgea_dispatch.hpp  fsgea_exec.h  fsgea_exec.hpp  fsgea_fora.h  fsgea_fora.hpp  fsgea_gpu.h  fsgea_gpu.hpp  fsgea_multilevel.h  fsgea_multilevel.hpp  fsgea_phenotype.h  fsgea_phenotype.hpp  fsgea_phenotype_gpu.h  fsgea_phenotype_gpu.hpp  fsgea_qvalue.h  fsgea_qvalue.hpp  rcpp_glue.cpp
tests/: testthat.R
tests/cpp/: test_core.cpp
tests/testthat/: test-calc-gsea-stat.R  test-fgsea.R  test-fora.R  test-multilevel.R  test-phenotype.R  test-qvalue.R
